[CHANGE] Move email subject and body to localization file
Resolves: #22

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -82,7 +82,7 @@ return PhpCsFixer\Config::create()
     ->setFinder(
         PhpCsFixer\Finder::create()
             ->in(__DIR__)
-            ->exclude('.Build')
+            ->exclude('.build')
             ->exclude('Documentation')
             ->notName('ext_emconf.php')
             ->notName('ext_localconf.php')
