--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "bin-dir": ".build/bin"
   },
   "require": {
-    "php": ">=7.2,<7.3",
+    "php": ">=7.2,<=7.4",
     "typo3/cms-backend": ">=9.5.0,<=10.4.99",
     "typo3/cms-core": ">=9.5.0,<=10.4.99",
     "typo3/cms-extbase": ">=9.5.0,<=10.4.99",
