--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     "bin-dir": ".build/bin"
   },
   "require": {
-    "php": ">=7.2,<=7.4",
-    "typo3/cms-backend": ">=9.5.0,<=10.4.99",
-    "typo3/cms-core": ">=9.5.0,<=10.4.99",
-    "typo3/cms-extbase": ">=9.5.0,<=10.4.99",
-    "typo3/cms-extensionmanager": ">=9.5.0,<=10.4.99",
-    "typo3/cms-filelist": ">=9.5.0,<=10.4.99",
-    "typo3/cms-fluid": ">=9.5.0,<=10.4.99",
-    "typo3/cms-scheduler": ">=9.5.0,<=10.4.99",
+    "php": "^7.2 || ^7.3 || ^7.4",
+    "typo3/cms-backend": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-extbase": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-extensionmanager": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-filelist": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-fluid": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-scheduler": "^9.5 || ^10.4 || ^11.5",
     "typo3fluid/fluid": "^2.7"
   },
   "require-dev": {
