--- a/composer.json
+++ b/composer.json
@@ -27,21 +27,21 @@
     }
   },
   "require": {
-    "php": ">=7.2,<=7.4",
-    "typo3/cms-backend": ">=9.5.0,<=10.4.99",
-    "typo3/cms-core": ">=9.5.0,<=10.4.99",
-    "typo3/cms-extbase": ">=9.5.0,<=10.4.99",
-    "typo3/cms-extensionmanager": ">=9.5.0,<=10.4.99",
-    "typo3/cms-filelist": ">=9.5.0,<=10.4.99",
-    "typo3/cms-fluid": ">=9.5.0,<=10.4.99",
-    "typo3/cms-scheduler": ">=9.5.0,<=10.4.99",
+    "php": "^7.4",
+    "typo3/cms-backend": "^10.4 || ^11.5",
+    "typo3/cms-core": "^10.4 || ^11.5",
+    "typo3/cms-extbase": "^10.4 || ^11.5",
+    "typo3/cms-extensionmanager": "^10.4 || ^11.5",
+    "typo3/cms-filelist": "^10.4 || ^11.5",
+    "typo3/cms-fluid": "^10.4 || ^11.5",
+    "typo3/cms-scheduler": "^10.4 || ^11.5",
     "typo3fluid/fluid": "^2.7"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.14",
-    "roave/security-advisories": "dev-master",
-    "typo3/cms-frontend": ">=9.5.0,<=10.4.99",
-    "typo3/cms-install": ">=9.5.0,<=10.4.99"
+    "roave/security-advisories": "dev-latest",
+    "typo3/cms-frontend": "^10.4 || ^11.5",
+    "typo3/cms-install": "^10.4 || ^11.5"
   },
   "suggest": {
     "ext-intl": "*"
