--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,11 @@
     "optimize-autoloader": true,
     "sort-packages": true,
     "vendor-dir": ".build/vendor",
-    "bin-dir": ".build/bin"
+    "bin-dir": ".build/bin",
+    "allow-plugins": {
+      "typo3/class-alias-loader": true,
+      "typo3/cms-composer-installers": true
+    }
   },
   "require": {
     "php": ">=7.2,<=7.4",
