--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -16,7 +16,9 @@ hooks:
     - exec: composer install -d /var/www/html
 use_dns_when_possible: true
 composer_version: "2"
-web_environment: [ ]
+web_environment:
+    - PATH=/var/www/html/.build/bin:$PATH
+    - TYPO3_CONTEXT=Development
 nodejs_version: "18"
 upload_dirs:
   [
