--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
     }
   },
   "scripts": {
-    "cs:fix": "php-cs-fixer fix --verbose --using-cache=no --diff --diff-format udiff --path-mode=intersection .",
+    "cs:fix": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix --config=.php-cs-fixer.dist.php --verbose --using-cache=no --diff --path-mode=intersection .",
     "post-autoload-dump": [
       "mkdir -p .build/web/typo3conf/ext/",
       "[ -L .build/web/typo3conf/ext/fal_quota ] || ln -snvf ../../../../. .build/web/typo3conf/ext/fal_quota"
