--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,6 +1,6 @@
 name: fal-quota
 type: typo3
-docroot: .Build/public
+docroot: .Build/web
 php_version: "8.3"
 webserver_type: apache-fpm
 xdebug_enabled: false
