--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -5,20 +5,8 @@ services:
     autoconfigure: true
     public: false
 
-  core.connectionPool:
-    class: 'TYPO3\CMS\Core\Database\ConnectionPool'
-
-  core.moduleTemplateFactory:
-    class: 'TYPO3\CMS\Backend\Template\ModuleTemplateFactory'
-
-  Mehrwert\FalQuota\Utility\QuotaUtility:
-    public: true
-    arguments:
-      $connectionPool: '@core.connectionPool'
-
   Mehrwert\FalQuota\Controller\DashboardController:
-    arguments:
-      $moduleTemplateFactory: '@core.moduleTemplateFactory'
+    public: true
 
   Mehrwert\FalQuota\Command\NotifyCommand:
     tags:
@@ -36,117 +24,150 @@ services:
         hidden: false
         schedulable: true
 
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileAdded:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileAdded'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileAddedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileContentSet:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileContentSet'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileContentsSetEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileCopied:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileCopied'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileCopiedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileCreated:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileCreated'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileCreatedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileDeleted:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileDeleted'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileDeletedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileMoved:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileMoved'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileMovedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileRenamed:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileRenamed'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileRenamedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileReplaced:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFileReplaced'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFileReplacedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFolderCopied:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFolderCopied'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFolderCopiedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFolderDeleted:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFolderDeleted'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFolderDeletedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFolderMoved:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFolderMoved'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFolderMovedEvent
-
-  Mehrwert\FalQuota\EventListener\SetQuotaAfterFolderRenamed:
-    tags:
-      - name: event.listener
-        identifier: 'SetQuotaAfterFolderRenamed'
-        event: TYPO3\CMS\Core\Resource\Event\AfterFolderRenamedEvent
-
-
   Mehrwert\FalQuota\EventListener\CheckQuotaBeforeFileAdded:
+    public: true
     tags:
       - name: event.listener
         identifier: 'CheckQuotaBeforeFileAdded'
         event: TYPO3\CMS\Core\Resource\Event\BeforeFileAddedEvent
 
   Mehrwert\FalQuota\EventListener\CheckQuotaBeforeFileContentSet:
+    public: true
     tags:
       - name: event.listener
         identifier: 'CheckQuotaBeforeFileContentSet'
         event: TYPO3\CMS\Core\Resource\Event\BeforeFileContentsSetEvent
 
   Mehrwert\FalQuota\EventListener\CheckQuotaBeforeFileCopied:
+    public: true
     tags:
       - name: event.listener
         identifier: 'CheckQuotaBeforeFileCopied'
         event: TYPO3\CMS\Core\Resource\Event\BeforeFileCopiedEvent
 
   Mehrwert\FalQuota\EventListener\CheckQuotaBeforeFileCreated:
+    public: true
     tags:
       - name: event.listener
         identifier: 'CheckQuotaBeforeFileCreated'
         event: TYPO3\CMS\Core\Resource\Event\BeforeFileCreatedEvent
 
   Mehrwert\FalQuota\EventListener\CheckQuotaBeforeFileMoved:
+    public: true
     tags:
       - name: event.listener
         identifier: 'CheckQuotaBeforeFileMoved'
         event: TYPO3\CMS\Core\Resource\Event\BeforeFileMovedEvent
 
   Mehrwert\FalQuota\EventListener\CheckQuotaBeforeFileReplaced:
+    public: true
     tags:
       - name: event.listener
         identifier: 'CheckQuotaBeforeFileReplaced'
         event: TYPO3\CMS\Core\Resource\Event\BeforeFileReplacedEvent
 
   Mehrwert\FalQuota\EventListener\CheckQuotaBeforeFolderCopied:
+    public: true
     tags:
       - name: event.listener
         identifier: 'CheckQuotaBeforeFolderCopied'
         event: TYPO3\CMS\Core\Resource\Event\BeforeFolderCopiedEvent
+
+  Mehrwert\FalQuota\EventListener\RememberStorageAfterFileDeleted:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'RememberStorageAfterFileDeleted'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileDeletedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileAdded:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileAdded'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileAddedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileContentSet:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileContentSet'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileContentsSetEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileCopied:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileCopied'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileCopiedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileCreated:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileCreated'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileCreatedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileMoved:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileMoved'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileMovedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileRemovedFromIndex:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileRemovedFromIndex'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileRemovedFromIndexEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileRenamed:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileRenamed'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileRenamedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFileReplaced:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFileReplaced'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFileReplacedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFolderCopied:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFolderCopied'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFolderCopiedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFolderMoved:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFolderMoved'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFolderMovedEvent
+
+  Mehrwert\FalQuota\EventListener\SetQuotaAfterFolderRenamed:
+    public: true
+    tags:
+      - name: event.listener
+        identifier: 'SetQuotaAfterFolderRenamed'
+        event: TYPO3\CMS\Core\Resource\Event\AfterFolderRenamedEvent
+
+  Mehrwert\FalQuota\Form\Element\MegaByteInputElement:
+    public: true
+
+  Mehrwert\FalQuota\Handler\QuotaHandler:
+    public: true
+
+  Mehrwert\FalQuota\Hooks\DatamapDataHandlerHook:
+    public: true
+
+  Mehrwert\FalQuota\Updates\CommandIdentifierUpdateWizard:
+    public: true
+
+  Mehrwert\FalQuota\Utility\QuotaUtility:
+    public: true
