[TASK] Adjust .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-/.build
-/.ddev/*
-!/.ddev/config.yaml
-!/.ddev/docker-compose.env.yaml
+/.Build
 /.env
 /.idea
-/.php_cs.cache
 /composer.lock
-/.sass-cache
 /.tmp
 /.unison.*
 .DS_Store
+/config/
+/var/
+*.cache
 *GENERATED*
-*.css.map
-*.js.map
-/.php-cs-fixer.cache
