--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,9 @@
     "cs:fix": [
       "@putenv PHP_CS_FIXER_IGNORE_ENV=1",
       "php-cs-fixer fix --config=build/php-cs-fixer.php --verbose --using-cache=no --diff --path-mode=intersection ."
+    ],
+    "test:php:lint": [
+      "php -l *.php $(find Classes -iname '*.php') $(find Configuration -iname '*.php')"
     ]
   },
   "extra": {
