--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run PHP-CS-FIXER
         run: composer cs:fix -- --dry-run
+
+      - name: Run PHPStan
+        run: composer cs:analyze
