--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "bin-dir": ".Build/bin",
     "allow-plugins": {
       "cweagans/composer-patches": true,
+      "phpstan/extension-installer": true,
       "typo3/class-alias-loader": true,
       "typo3/cms-composer-installers": true
     }
@@ -47,7 +48,10 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.75",
     "networkteam/sentry-client": "^5.2",
+    "phpstan/extension-installer": "^1.3",
+    "rector/rector": "^1.1",
     "roave/security-advisories": "dev-latest",
+    "saschaegerer/phpstan-typo3": "^1.10",
     "ssch/typo3-rector": "^2.14",
     "typo3/cms-beuser": "^12.4",
     "typo3/cms-frontend": "^12.4",
@@ -63,6 +67,12 @@
     }
   },
   "scripts": {
+    "cs:analyze": [
+      "phpstan analyze --memory-limit=512M --verbose --configuration build/phpstan.neon"
+    ],
+    "cs:baseline": [
+      "phpstan analyze --memory-limit=512M --verbose --configuration build/phpstan.neon --generate-baseline build/phpstan-baseline.neon"
+    ],
     "cs:fix": [
       "@putenv PHP_CS_FIXER_IGNORE_ENV=1",
       "php-cs-fixer fix --config=build/php-cs-fixer.php --verbose --using-cache=no --diff --path-mode=intersection ."
