--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.4
+
       - uses: actions/checkout@v4
 
       - name: Validate composer.json
