--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     }
   },
   "require": {
-    "php": "^8.4",
+    "php": ">= 8.1 < 8.5",
     "psr/event-dispatcher": "^1.0",
     "psr/http-message": "^2.0",
     "psr/log": "^3.0",
